--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -115,101 +115,11 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
   </section>
 
   <div class="container">
-      <h2 class="text-danger ml-5 mt-5 text-center" >Predicted Total Medals (USA)</h2>
+      <h2 class="text-danger ml-5 my-5 text-center" >Predicted Total Medals (USA)</h2>
   </div>
-          <!-- Table - Actual count -->
-         <div class="container"> 
-          <div class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h5 class="m-0 font-weight-bold text-primary">Actual Medal Count</h5>
-            </div>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  <thead>
-                    <tr>
-                      <th>Year</th>
-<!--                       <th>Country</th>
-                      <th>Host</th> -->
-                      <th>Athletes</th>
-                      <th>Sports</th>
-                      <th>Events</th>
-                      <th>Gold</th>
-                      <th>Silver</th>
-                      <th>Bronze</th>
-                      <th>Total Medals</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                    <td>2004</td>
-<!--                     <td>USA</td>
-                    <td>0</td> -->
-                    <td>533</td>
-                    <td>31</td>
-                    <td>254</td>
-                    <td>36</td>
-                    <td>39</td>
-                    <td>26</td>
-                    <td>101</td>
-                    </tr>
-                    <tr>
-                    <td>2008</td>
-<!--                     <td>USA</td>
-                    <td>0</td> -->
-                    <td>588</td>
-                    <td>32</td>
-                    <td>258</td>
-                    <td>36</td>
-                    <td>39</td>
-                    <td>35</td>
-                    <td>110</td>
-                    </tr>
-                    <tr>
-                    <td>2012</td>
-<!--                     <td>USA</td>
-                    <td>0</td> -->
-                    <td>529</td>
-                    <td>31</td>
-                    <td>245</td>
-                    <td>46</td>
-                    <td>28</td>
-                    <td>29</td>
-                    <td>103</td>
-                    </tr>
-                    <tr>
-                    <td>2016</td>
-<!--                     <td>USA</td>
-                    <td>0</td> -->
-                    <td>555</td>
-                    <td>33</td>
-                    <td>245</td>
-                    <td>46</td>
-                    <td>37</td>
-                    <td>38</td>
-                    <td>121</td>
-                    </tr>
-                    <tr>
-                    <td>2020</td>
-<!--                     <td>USA</td>
-                    <td>0</td> -->
-                    <td>340</td>
-                    <td>191</td>
-                    <td>245</td>
-                    <td>25</td>
-                    <td>---</td>
-                    <td>---</td>
-                    <td>---</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-      </div>
 
 
-<!-- Table - Predicted count -Linear Regression-->
+<!-- Table - Predicted count -Linear Regressionand ARIMA-->
      <div class="container"> 
       <div class="card shadow mb-4">
         <div class="card-header py-3">
@@ -217,162 +127,10 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
         </div>
         <div class="card-body">
 
-<div class='tableauPlaceholder pl-5' id='viz1596626245970' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard_15966213547080&#47;MedalDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OlympicDashboard_15966213547080&#47;MedalDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard_15966213547080&#47;MedalDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1596626245970');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='816px';vizElement.style.maxWidth='916px';vizElement.style.width='100%';vizElement.style.height='627px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='816px';vizElement.style.maxWidth='916px';vizElement.style.width='100%';vizElement.style.height='627px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
-
+<div class='tableauPlaceholder pl-5' id='viz1596684436151' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard2&#47;MedalDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OlympicDashboard2&#47;MedalDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard2&#47;MedalDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1596684436151');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='920px';vizElement.style.height='587px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='920px';vizElement.style.height='587px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
       </div>
-      <p class="text-muted ml-2 mb-5">Source: <a href="https://en.wikipedia.org/wiki/United_States_at_the_2020_Summer_Olympics">Tokyo  Olympics Athletes, Sports, and Events count as of August 2020. Note: Qualification period extended to June 2021.</a></p>
     </div>
-
-<!-- Table - Predicted count -Linear Regression-->
-<!--      <div class="container"> 
-      <div class="card shadow mb-4">
-        <div class="card-header py-3">
-          <h5 class="m-0 font-weight-bold text-info text-center">Linear Regression: Predicted count</h5>
-        </div>
-        <div class="card-body">
-          <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-              <thead>
-                <tr>
-                  <th>Year</th>
-                  <th>Country</th>
-                  <th>Gold</th>
-                  <th>Silver</th>
-                  <th>Bronze</th>
-                  <th>Total Medals</th> -->
-<!--                   <th>Test Score</th> -->
-<!--                   <th>Test Score</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                <td>2004</td>
-                <td>USA</td>
-                <td class="text-warning">99</td>
-                <td class="text-warning">41</td>
-                <td class="text-warning">30</td>
-                <td class="text-warning">28</td>
-                <td rowspan="4" class="text-centerr">Gold: 0.174 <br><br>Silver: 0.444<br><br>Bronze: -1.74<br><br>Total Medals: 0.378</td>
-                </tr>
-                <tr>
-                <td>2008</td>
-                <td>USA</td>
-                <td class="text-warning">43</td>
-                <td class="text-warning">33</td>
-                <td class="text-warning">31</td>
-                <td class="text-warning">106</td>
-                </tr>
-                <tr>
-                <td>2012</td>
-                <td>USA</td>
-                <td class="text-warning">42</td>
-                <td class="text-warning">32</td>
-                <td class="text-warning">30</td>
-                <td class="text-warning">104</td>
-              
-                </tr>
-                <tr>
-                <td>2016</td>
-                <td>USA</td>
-                <td class="text-warning">44</td>
-                <td class="text-warning">34</td>
-                <td class="text-warning">32</td>
-                <td class="text-warning">110</td>
-
-                </tr>
-                <tr>
-                <td>2020</td>
-                <td>USA</td>
-                <td class="text-warning">41</td>
-                <td class="text-warning">29</td>
-                <td class="text-warning">26</td>
-                <td class="text-warning">96</td>
-                <td>---</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-  </div> -->
-
-<!-- Table - Predicted count -ARIMA Model-->
-<!--      <div class="container"> 
-      <div class="card shadow mb-4">
-        <div class="card-header py-3">
-          <h5 class="m-0 font-weight-bold text-info text-center">ARIMA Model: Predicted count</h5>
-        </div>
-        <div class="card-body">
-          <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-              <thead>
-                <tr>
-                  <th>Year</th>
-                  <th>Country</th>
-                  <th>Gold</th>
-                  <th>Silver</th>
-                  <th>Bronze</th>
-                  <th>Total Medals</th>
-                  <th>MSE value</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                <td>2004</td>
-                <td>USA</td>
-                <td class="text-warning">39</td>
-                <td class="text-warning">31</td>
-                <td class="text-warning">29</td>
-                <td class="text-warning">99</td>
-                <td rowspan="4" class="text-centerr">Gold: 29.77 <br><br>Silver: 26.13<br><br>Bronze: 21.09<br><br>Total Medals: 62.82</td>
-                </tr>
-                <tr>
-                <td>2008</td>
-                <td>USA</td>
-                <td class="text-warning">41</td>
-                <td class="text-warning">32</td>
-                <td class="text-warning">29</td>
-                <td class="text-warning">100</td> -->
-                <!-- <td>Gold: %, Silver:%, <br>Bronze: %, Total Medals: %</td> -->
-<!--                 </tr>
-                <tr>
-                <td>2012</td>
-                <td>USA</td>
-                <td class="text-warning">36</td>
-                <td class="text-warning">30</td>
-                <td class="text-warning">32</td>
-                <td class="text-warning">110</td> -->
-                <!-- <td>Gold: %, Silver:%, <br>Bronze: %, Total Medals: %</td> -->
-<!--                 </tr>
-                <tr>
-                <td>2016</td>
-                <td>USA</td>
-                <td class="text-warning">38</td>
-                <td class="text-warning">37</td>
-                <td class="text-warning">35</td>
-                <td class="text-warning">110</td> -->
-                <!-- <td>Gold: %, Silver:%, <br>Bronze: %, Total Medals: %</td> -->
-<!--                 </tr>
-                <tr>
-                <td>2020</td>
-                <td>USA</td>
-                <td class="text-warning">41</td>
-                <td class="text-warning">37</td>
-                <td class="text-warning">35</td>
-                <td class="text-warning">117</td>
-                <td>---</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-       <p class="text-muted ml-2">Source: <a href="https://en.wikipedia.org/wiki/United_States_at_the_2020_Summer_Olympics">Tokyo  Olympics Athletes, Sports, and Events count as of August 2020. Note: Qualification period extended to June 2021.</a></p>
-  </div>
- -->
-
 
 
 <hr>
@@ -390,64 +148,52 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
             </div>
             <div class="card-body">
 
-
-    <div class="container">
-      <div class="row">
-            <div class="col-md-2 mt-5" >
-              <aside class="filters">
-                <div class="panel panel-default">
-                  <div class="panel-heading mb-3 text-center"><h5>Filter Search</h5></div>
-                  <div class="panel-body">
-                    <form id = 'form'>
-                      <div class="form-group">
-                        <ul class="list-group" id="filters">
-                        </ul>
+              <div class="container">
+                <div class="row">
+                      <div class="col-md-2 mt-5" >
+                        <aside class="filters">
+                          <div class="panel panel-default">
+                            <div class="panel-heading mb-3 text-center"><h5>Filter Search</h5></div>
+                            <div class="panel-body">
+                              <form id = 'form'>
+                                <div class="form-group">
+                                  <ul class="list-group" id="filters">
+                                  </ul>
+                                </div>
+                              </form>
+                            </div>
+                            <div class="panel-footer">
+                              <button class="btn btn-info" onclick="location.reload();">Clear Filters</button>
+                            </div>
+                          </div>
+                        </aside>
                       </div>
-                    </form>
+                  <div class="col-md-10 mt-5">
+                    <div id="table-area" class="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
+                      <table id="ufo-table" class="table table-bordered table-striped table-hover table-condensed">
+                        <thead id="thtable">
+                          <tr>
+                            <th class="table-head"><h6>Age</h6></th>
+                            <th class="table-head"><h6>Height</h6></th>
+                            <th class="table-head"><h6>Weight</h6></th>
+                            <th class="table-head"><h6>Total Medals</h6></th>
+                          </tr>
+                        </thead>
+                        <tbody></tbody>
+                      </table>
+                    </div>
                   </div>
-                  <div class="panel-footer">
-                    <button class="btn btn-info" onclick="location.reload();">Clear Filters</button>
-                  </div>
+
+                  <div class="col-md-1 mb-5"> </div>
+
                 </div>
-              </aside>
-            </div>
-        <div class="col-md-10 mt-5">
-          <div id="table-area" class="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
-            <table id="ufo-table" class="table table-bordered table-striped table-hover table-condensed">
-              <thead id="thtable">
-                <tr>
-                  <th class="table-head"><h6>Age</h6></th>
-                  <th class="table-head"><h6>Height</h6></th>
-                  <th class="table-head"><h6>Weight</h6></th>
-                  <th class="table-head"><h6>Total Medals</h6></th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
+              </div>
+            </tbody>
+          </table>
         </div>
-
-        <div class="col-md-1 mb-5"> </div>
-
       </div>
     </div>
-
-
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-      </div>
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
