--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -110,7 +110,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
   <section class="container-fluid my-3 text-center">
     <br>
-    <a class="text-danger" href="#predicted_medals"><h5>Medal Prediction</a> | <a class="text-danger" href="#gymnastic_body_comp"> Age & Body Composition</a></h5>
+    <a class="text-danger" href="#predicted_medals"><h5>Medal Prediction</a> | <a class="text-danger" href="#gymnastic_body_comp"> Olympic Medalists</a></h5>
     <br>
   </section>
 
@@ -123,20 +123,120 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
      <div class="container"> 
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression & ARIMA Model: Predicted count</h5>
+          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression & ARIMA Model: USA Predicted count(2004-2020)</h5>
         </div>
         <div class="card-body">
 
-<div class='tableauPlaceholder pl-5' id='viz1596684436151' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard2&#47;MedalDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OlympicDashboard2&#47;MedalDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard2&#47;MedalDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1596684436151');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='920px';vizElement.style.height='587px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='920px';vizElement.style.height='587px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1596754698868' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard-LinearRegressionandARIMA&#47;MedalDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='OlympicDashboard-LinearRegressionandARIMA&#47;MedalDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ol&#47;OlympicDashboard-LinearRegressionandARIMA&#47;MedalDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1596754698868');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='820px';vizElement.style.height='587px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='820px';vizElement.style.height='587px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
       </div>
     </div>
 
 
+
+<!-- Predicted 2020 -->
+     <div class="container"> 
+      <div class="card shadow mb-4">
+        <div class="card-header py-3">
+          <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression: Top 10 Countries Predicted count for 2020</h5>
+        </div>
+        <div class="card-body">
+          <div id="table-area" class="">
+            <table id="machine-learning-table-2020" class="table table-bordered table-hover table-condensed">
+              <thead>
+                <tr>
+                <th class="table-head"><h6>Country</h6></th>
+                <th class="table-head"><h6>Predicted Gold</h6></th>
+                <th class="table-head"><h6>Predicted Silver</h6></th>
+                <th class="table-head"><h6>Predicted Bronze</h6></th>
+                <th class="table-head"><h6>Predicted Total Medals</h6></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>USA</td>
+                  <td>32</td>
+                  <td>24</td>
+                  <td>21</td>
+                  <td>80</td>
+                </tr>
+                <tr>
+                  <td>Japan</td>
+                  <td>20</td>
+                  <td>16</td>
+                  <td>14</td>
+                  <td>52</td>
+                </tr>
+                <tr>
+                  <td>Russia</td>
+                  <td>19</td>
+                  <td>15</td>
+                  <td>13</td>
+                  <td>49</td>
+                </tr>                                
+                <tr>
+                  <td>Australia</td>
+                  <td>12</td>
+                  <td>13</td>
+                  <td>12</td>
+                  <td>38</td>
+                </tr>
+                <tr>
+                  <td>China</td>
+                  <td>13</td>
+                  <td>8</td>
+                  <td>8</td>
+                  <td>29</td>
+                </tr>
+                <tr>
+                  <td>Germany</td>
+                  <td>8</td>
+                  <td>10</td>
+                  <td>11</td>
+                  <td>28</td>
+                </tr>
+                <tr>
+                  <td>UK</td>
+                  <td>6</td>
+                  <td>9</td>
+                  <td>7</td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>France</td>
+                  <td>5</td>
+                  <td>6</td>
+                  <td>7</td>
+                  <td>17</td>
+                </tr>
+                <tr>
+                  <td>Italy</td>
+                  <td>7</td>
+                  <td>5</td>
+                  <td>5</td>
+                  <td>17</td>
+                </tr>
+                <tr>
+                  <td>Netherlands</td>
+                  <td>4</td>
+                  <td>6</td>
+                  <td>5</td>
+                  <td>16</td>
+                </tr>                                                                                                
+
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
 <hr>
 
   <div class="container" id="gymnastic_body_comp">
-      <h2 class="text-danger ml-5 mt-5 mb-3 text-center">Predicted Age & Body Composition</h2>
+      <h2 class="text-danger ml-5 mt-5 mb-3 text-center">Predicted Olympic Medalists for 2020</h2>
   </div>
 
 
@@ -144,56 +244,84 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
          <div class="container"> 
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h5 class="m-0 font-weight-bold text-info text-center">Logistic Regression: Predicted Age and Body Composition</h5>
+              <h5 class="m-0 font-weight-bold text-info text-center">Logistic Regression: Olympic Medalists</h5>
             </div>
             <div class="card-body">
+        <div class="card-body">
+          <div id="table-area" class="">
+            <table id="machine-learning-table-2020" class="table table-bordered table-hover table-condensed">
+              <thead>
+                <tr>
+                <th class="table-head"><h6>Sport</h6></th>
+                <th class="table-head"><h6>Predicted<br>Age</h6></th>
+                <th class="table-head"><h6>Predicted<br>Height(cm)</h6></th>
+                <th class="table-head"><h6>Predicted<br>Weight(kg)</h6></th>
+                <th class="table-head"><h6>Predicted<br>Medals</h6></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Basketball</td>
+                  <td>24</td>
+                  <td>180</td>
+                  <td>80</td>
+                  <td>0</td>
+                </tr>
+                <tr>
+                  <td>Judo</td>
+                  <td>23</td>
+                  <td>170</td>
+                  <td>60</td>
+                  <td>0</td>
+                </tr>
+                <tr>
+                  <td>Badminton</td>
+                  <td>31</td>
+                  <td>172</td>
+                  <td>70</td>
+                  <td>0</td>
+                </tr>                                
+                <tr>
+                  <td>Sailing</td>
+                  <td>30</td>
+                  <td>159</td>
+                  <td>55</td>
+                  <td>0</td>
+                </tr>
+                <tr>
+                  <td>Gymnastics</td>
+                  <td>28</td>
+                  <td>175</td>
+                  <td>64</td>
+                  <td>1</td>
+                </tr>
+                                                                                                                
 
-              <div class="container">
-                <div class="row">
-                      <div class="col-md-2 mt-5" >
-                        <aside class="filters">
-                          <div class="panel panel-default">
-                            <div class="panel-heading mb-3 text-center"><h5>Filter Search</h5></div>
-                            <div class="panel-body">
-                              <form id = 'form'>
-                                <div class="form-group">
-                                  <ul class="list-group" id="filters">
-                                  </ul>
-                                </div>
-                              </form>
-                            </div>
-                            <div class="panel-footer">
-                              <button class="btn btn-info" onclick="location.reload();">Clear Filters</button>
-                            </div>
-                          </div>
-                        </aside>
-                      </div>
-                  <div class="col-md-10 mt-5">
-                    <div id="table-area" class="table-responsive table-wrapper-scroll-y my-custom-scrollbar scrollbar-primary">
-                      <table id="ufo-table" class="table table-bordered table-striped table-hover table-condensed">
-                        <thead id="thtable">
-                          <tr>
-                            <th class="table-head"><h6>Age</h6></th>
-                            <th class="table-head"><h6>Height</h6></th>
-                            <th class="table-head"><h6>Weight</h6></th>
-                            <th class="table-head"><h6>Total Medals</h6></th>
-                          </tr>
-                        </thead>
-                        <tbody></tbody>
-                      </table>
-                    </div>
-                  </div>
+              </tbody>
 
-                  <div class="col-md-1 mb-5"> </div>
 
-                </div>
-              </div>
-            </tbody>
-          </table>
+            </table>
+          </div>
+
+            
+            
+              <img src="../static/assets/images/images_chart2/individual_sports.PNG" alt="Individual sports" style="width:50%" class="rounded float-left">
+              <img src="../static/assets/images/images_chart2/team_sports.PNG" alt="Team Sports" style="width:50%" class="rounded float-right">
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
+
+
+
+
+
+<div class="container">
+
 </div>
+
 
 
 
