fixing buttons and tableau format

--- a/Flask API/templates/index.html
+++ b/Flask API/templates/index.html
@@ -90,7 +90,7 @@
 
 
     <a button type="button" class="btn btn-success btn-sm mx-auto my-2" href="https://github.com/diannejardinez/Olympic_Data_Project">GitHub - Visualizations</button></a>
-    <a button type="button" class="btn btn-success btn-sm mx-auto my-2" href="https://github.com/diannejardinez/Olympic_Data_machine_learning">GitHub - Machine Learning</button></a><br>
+    <a button type="button" class="btn btn-success btn-sm mx-auto my-2" href="https://github.com/diannejardinez/Olympic_Data_machine_learning">GitHub - Machine Learning</button></a>
 
 
 
