--- a/Flask API/templates/machine_learning.html
+++ b/Flask API/templates/machine_learning.html
@@ -73,7 +73,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
             <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
             <a class="dropdown-item" href="chart2.html">Total Medals VS GDP</a>
             <a class="dropdown-item" href="chart3.html">Total Medals World View - Seasons</a>
-            <a class="dropdown-item" href="chart4.html">Total Medals World View - Sport</a>
+            <!-- <a class="dropdown-item" href="chart4.html">Total Medals World View - Sport</a> -->
           </div>
         <li class="nav-item">
           <a class="nav-link" href="analysis.html">Analysis</a>
