restoring static website

--- a/Flask API/templates/data.html
+++ b/Flask API/templates/data.html
@@ -80,7 +80,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
           <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
           <a class="dropdown-item" href="chart2.html">Medals VS GDP</a>
           <a class="dropdown-item" href="chart3.html">Medals World View - Seasons</a>
-          <!-- <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a> -->
+          <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
         </div>
       <li class="nav-item">
         <a class="nav-link" href="analysis.html">Analysis</a>
