--- a/Flask API/templates/machine_learning.html
+++ b/Flask API/templates/machine_learning.html
@@ -73,7 +73,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
             <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
             <a class="dropdown-item" href="chart2.html">Total Medals VS GDP</a>
             <a class="dropdown-item" href="chart3.html">Total Medals World View - Seasons</a>
-            <!-- <a class="dropdown-item" href="chart4.html">Total Medals World View - Sport</a> -->
+            <a class="dropdown-item" href="chart4.html">Total Medals World View - Sport</a>
           </div>
         <li class="nav-item">
           <a class="nav-link" href="analysis.html">Analysis</a>
@@ -151,7 +151,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
 
 
 <!-- Predicted 2020 -->
-<!--      <div class="container"> 
+     <div class="container"> 
       <div class="card shadow mb-4">
         <div class="card-header py-3">
           <h5 class="m-0 font-weight-bold text-info text-center" id="predicted_medals">Linear Regression: Top 10 Countries Predicted count for 2020</h5>
@@ -245,7 +245,7 @@ css from https://mdbootstrap.com/docs/jquery/javascript/scroll/*/
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
 
 
