--- a/Flask API/templates/chart4.html
+++ b/Flask API/templates/chart4.html
@@ -54,7 +54,7 @@ crossorigin=""></script>
           <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
           <a class="dropdown-item" href="chart2.html">Medals VS GDP</a>
           <a class="dropdown-item" href="chart3.html">Medals World View - Seasons</a>
-          <!-- <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a> -->
+          <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
         </div>
       <li class="nav-item">
         <a class="nav-link" href="analysis.html">Analysis</a>
