--- a/Flask-API/templates/chart2.html
+++ b/Flask-API/templates/chart2.html
@@ -72,7 +72,7 @@
   
   <section id="header" class="text-center">
       <h1 class="mb-5 display-3 content">Medals VS GDP</h1>
-      <h2 class="mb-5 content">Does money buy medals?</h2>
+<!--       <h2 class="mb-5 content">Does money buy medals?</h2> -->
   </section>
 </div>
 
@@ -85,7 +85,7 @@
     <div class= "container d-flex justify-content-center ">
       <div class="row">
           <div class="col-md-12">
-              <h2>Sport Participation and Popularity</h2>
+              <!-- <h2>Sport Participation and Popularity</h2> -->
               <p></p>
                 <div id="plot"></div>
           </div>
